# SMP_project

./: .gitignore  CMakeLists.txt  README.md
include/: index.hpp  io.hpp  sort_ff.hpp  sort_omp.hpp  utils.hpp
scripts/: build.sh  run.sh
src/: index.cpp  io.cpp  main_ff.cpp  main_mpi.cpp  main_omp.cpp  main_seq.cpp  utils.cpp
